# pgs_ai_governance

./: .gitignore  README.md  pyproject.toml
pgs_ai_governance/implementation/capability_transforms/atoms/: ct_pure_collatz_step_v0.py  ct_pure_termination_check_v0.py
pgs_ai_governance/registry/agent_admission/capability_contracts/: CC_BIND_AGENT_LICENSE_TO_TOOL_SURFACE_V0.md  CC_CHECK_AGENT_TOOL_DECLARED_V0.md  CC_VALIDATE_AGENT_TOOL_PARAMETERS_V0.md
pgs_ai_governance/registry/agent_admission/intents/: IN_AGENT_ADMISSION_REQUESTED_V0.md
pgs_ai_governance/registry/agent_admission/layers/: STRUCTURE_AGENT_ADMISSION_STORAGE_V0.md
pgs_ai_governance/registry/agent_admission/runtime_bindings/: RB_AGENT_ADMISSION_BINDINGS_V0.md
pgs_ai_governance/registry/agent_admission/workflows/: WF_GOVERN_AGENT_ADMISSION_V0.md
pgs_ai_governance/registry/agent_governance/actors/: AC_AGENT_V0.md  AC_ENTERPRISE_RUNTIME_V0.md  AC_SYSTEM_GOVERNOR_V0.md
pgs_ai_governance/registry/agent_governance/capability_contracts/: CC_BIND_LICENSE_TO_TOOL_SURFACE_V0.md  CC_CHECK_TOOL_DECLARED_V0.md  CC_NORMALIZE_AGENT_REQUEST_V0.md  CC_RECORD_DENIED_ACTION_V0.md  CC_RECORD_GOVERNED_ACTION_V0.md  CC_RESOLVE_LICENSE_TIER_V0.md  CC_VALIDATE_TOOL_PARAMETERS_V0.md
pgs_ai_governance/registry/agent_governance/events/: EV_AGENT_ACTION_AUTHORIZED_V0.md  EV_AGENT_ACTION_DENIED_V0.md
pgs_ai_governance/testbed/agent_admission/: README.md
pgs_ai_governance/testbed/agent_governance/: README.md
pgs_ai_governance/testbed/ai_licensing/: replay.py
pgs_ai_governance/testbed/ai_licensing/scenarios/: base.py  (+6 more)
(+61 files in other folders)
