[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgs_ai_governance"
version = "0.3.0"
description = "PGS AI Governance Domain — agent governance and AI licensing capability transforms"
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"

authors = [
  { name = "Bhash Ganti aka Bachi" }
]

dependencies = []

keywords = ["pgs", "protocol", "ai-governance", "capability-transforms", "agent-governance"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/bachipeachy/pgs_ai_governance"
Repository = "https://github.com/bachipeachy/pgs_ai_governance"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgs_ai_governance*"]

[tool.setuptools]
include-package-data = true